#5 user model -> controller done